# opentelemetry-datalake

./: .gitignore  AGENTS.md  CODE_REVIEW_INSTRUCTIONS.md  CONTRIBUTING.md  Cargo.toml  DEVELOPING.md  Makefile  README.md  SECURITY.md  deny.toml  dist-workspace.toml  sonar-project.properties
.cargo/: audit.toml  config.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml  sonar.yml
crates/arrow-codec/: Cargo.toml
crates/arrow-codec/benches/: codec_bench.rs
crates/arrow-codec/src/: common.rs  compliance.rs  lib.rs  logs.rs  metrics.rs  traces.rs
crates/core/: Cargo.toml
crates/core/benches/: fanout_bench.rs
crates/core/src/: config.rs  error.rs  lib.rs  pipeline.rs  telemetry.rs
crates/kafka-sink/: Cargo.toml
crates/kafka-sink/src/: lib.rs
crates/noop-transformer/: Cargo.toml
crates/noop-transformer/src/: lib.rs
crates/otlp-receiver/: Cargo.toml
crates/otlp-receiver/src/: lib.rs
crates/storage/: Cargo.toml
crates/storage/benches/: storage_bench.rs
crates/storage/src/: iceberg.rs  lib.rs
docs/: ARCHITECTURE.md  administration.md  buffer.md  components.md  configuration.md  instrumentation.md  lakehouse.md
docs/schemas/: README.md  logs_table.sql  metrics_table.sql  traces_table.sql
src/: main.rs
tests/e2e/: bootstrap.py  config.toml  docker-compose.yml  requirements.txt  run.sh  verify.py
wix/: main.wxs
