[package]
name = "opentelemetry-datalake"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
description = { workspace = true }
homepage = { workspace = true }
authors = { workspace = true }

[package.metadata.wix]
upgrade-guid = "2114856D-4676-4C5F-9E8D-4FFC419C8961"
path-guid = "E7FF3F65-3358-4192-8399-B0A919F15306"
license = false
eula = false

[workspace]
resolver = "2"
members = [
    "crates/*"
]

[workspace.package]
description = "An OpenTelemetry datalake receiver streaming to Apache Iceberg"
version = "0.1.0"
edition = "2024"
license = "MPL-2.0"
repository = "https://github.com/jimmystewpot/opentelemetry-datalake"
homepage = "https://github.com/jimmystewpot/opentelemetry-datalake"
authors = ["James Lamb"]

[dependencies]
pipeline-core = { workspace = true }
otlp-receiver = { workspace = true }
noop-transformer = { workspace = true }
kafka-sink = { workspace = true }
storage = { workspace = true, default-features = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
figment = { workspace = true }
serde = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }

[workspace.dependencies]
# Internal Workspace Crates
pipeline-core = { path = "crates/core", version = "0.1.0" }
arrow-codec = { path = "crates/arrow-codec", version = "0.1.0" }
otlp-receiver = { path = "crates/otlp-receiver", version = "0.1.0" }
noop-transformer = { path = "crates/noop-transformer", version = "0.1.0" }
kafka-sink = { path = "crates/kafka-sink", version = "0.1.0" }
storage = { path = "crates/storage", version = "0.1.0" }

# Async Runtime
tokio = { version = "1.37", features = ["full"] }

# Errors
thiserror = "2.0.18"
anyhow = "1.0"

# Telemetry
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-opentelemetry = "0.33.0"
opentelemetry = { version = "0.32.0", features = ["trace", "metrics", "logs"] }
opentelemetry-otlp = { version = "0.32.0", features = ["grpc-tonic", "metrics", "logs"] }
opentelemetry_sdk = { version = "0.32.1", features = ["rt-tokio", "trace", "metrics", "logs"] }
opentelemetry-semantic-conventions = "0.32.0"
async-trait = "0.1"

# Serialization & Config
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.12.1", features = ["v7"] }
figment = { version = "0.10", features = ["env", "toml"] }
clap = "4.5"

# Arrow
arrow = "57.3.1"
parquet = { version = "57.3.1", features = ["async"] }

# Codec & OTLP Parsing
prost = "0.14.4"
opentelemetry-proto = { version = "0.32.0", features = ["gen-tonic-messages", "gen-tonic", "tonic", "logs", "metrics", "trace", "serde"] }

# Networking
tonic = "0.14.6"
axum = "0.8.9"

# Sinks
rdkafka = { version = "0.39.0", features = ["cmake-build"] }

# Testing & Benchmarking
criterion = { version = "0.8.2", features = ["async_tokio"] }

# Storage & Iceberg Catalogs
chrono = { version = "0.4.38", features = ["serde"] }
iceberg = "0.9.1"
iceberg-catalog-rest = "0.9.1"
iceberg-catalog-glue = "0.9.1"
iceberg-catalog-s3tables = "0.9.1"
iceberg-storage-opendal = { version = "0.9.1", features = ["opendal-s3"] }

[profile.release]
lto = "thin"
debug = true

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[patch.crates-io]
paste = { git = "https://github.com/dtolnay/paste" }

