[package]
name = "opentelemetry-datalake"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
description = { workspace = true }
homepage = { workspace = true }
authors = { workspace = true }

[package.metadata.wix]
upgrade-guid = "2114856D-4676-4C5F-9E8D-4FFC419C8961"
path-guid = "E7FF3F65-3358-4192-8399-B0A919F15306"
license = false
eula = false

[workspace]
resolver = "2"
members = [
    "crates/*"
]

[workspace.package]
description = "An OpenTelemetry datalake receiver streaming to Apache Iceberg"
version = "0.1.0"
edition = "2024"
license = "MPL-2.0"
repository = "https://github.com/jimmystewpot/opentelemetry-datalake"
homepage = "https://github.com/jimmystewpot/opentelemetry-datalake"
authors = ["James Lamb"]

[dependencies]
pipeline-core = { workspace = true }
otlp-receiver = { workspace = true }
noop-transformer = { workspace = true }
kafka-sink = { workspace = true }
storage = { workspace = true, features = ["aws"] }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
figment = { workspace = true }
serde = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }

[workspace.dependencies]
# Internal Workspace Crates
pipeline-core = { path = "crates/core", version = "0.1.0" }
arrow-codec = { path = "crates/arrow-codec", version = "0.1.0" }
otlp-receiver = { path = "crates/otlp-receiver", version = "0.1.0" }
noop-transformer = { path = "crates/noop-transformer", version = "0.1.0" }
kafka-sink = { path = "crates/kafka-sink", version = "0.1.0" }
storage = { path = "crates/storage", version = "0.1.0", default-features = false }

# Async Runtime
tokio = { version = "1.37", default-features = false, features = ["full"] }

# Errors
thiserror = "2.0.18"
anyhow = { version = "1.0", default-features = false, features = ["std"] }

# Telemetry
tracing = { version = "0.1", default-features = false, features = ["std", "attributes"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter", "json", "fmt", "ansi", "std", "registry"] }
tracing-opentelemetry = { version = "0.33.0", default-features = false }
opentelemetry = { version = "0.32.0", default-features = false, features = ["trace", "metrics", "logs"] }
opentelemetry-otlp = { version = "0.32.0", default-features = false, features = ["grpc-tonic", "metrics", "logs", "trace"] }
opentelemetry_sdk = { version = "0.32.1", default-features = false, features = ["rt-tokio", "trace", "metrics", "logs"] }
opentelemetry-semantic-conventions = "0.32.0"
async-trait = "0.1"

# Serialization & Config
serde = { version = "1.0", default-features = false, features = ["derive", "std"] }
serde_json = { version = "1.0", default-features = false, features = ["std"] }
uuid = { version = "1.12.1", default-features = false, features = ["v7", "std"] }
figment = { version = "0.10", default-features = false, features = ["env", "toml"] }
clap = { version = "4.5", default-features = false, features = ["derive", "std", "help", "usage", "error-context", "suggestions"] }

# Arrow
arrow = { version = "58", default-features = false, features = ["json"] }
parquet = { version = "58", default-features = false, features = ["async", "arrow", "zstd", "snap", "flate2", "lz4"] }

# Codec & OTLP Parsing
prost = { version = "0.14.4", default-features = false, features = ["std", "derive"] }
opentelemetry-proto = { version = "0.32.0", default-features = false, features = ["gen-tonic-messages", "gen-tonic", "tonic", "logs", "metrics", "trace", "with-serde"] }

# Networking
tonic = { version = "0.14.6", default-features = false, features = ["transport", "codegen", "router"] }
axum = { version = "0.8.9", default-features = false, features = ["http1", "http2", "tokio", "json"] }

# Sinks
rdkafka = { version = "0.39.0", default-features = false, features = ["cmake-build", "tokio"] }

# Testing & Benchmarking
criterion = { version = "0.8.2", default-features = false, features = ["async_tokio", "cargo_bench_support"] }

# Storage & Iceberg Catalogs
chrono = { version = "0.4.38", default-features = false, features = ["clock", "serde", "std"] }
iceberg = { default-features = false, git = "https://github.com/apache/iceberg-rust.git", rev = "2454d64f8ee4fb351d0e917620e5dd1971f7eeb2" }
iceberg-catalog-rest = { default-features = false, git = "https://github.com/apache/iceberg-rust.git", rev = "2454d64f8ee4fb351d0e917620e5dd1971f7eeb2" }
iceberg-catalog-glue = { default-features = false, git = "https://github.com/apache/iceberg-rust.git", rev = "2454d64f8ee4fb351d0e917620e5dd1971f7eeb2" }  
iceberg-catalog-s3tables = { default-features = false, git = "https://github.com/apache/iceberg-rust.git", rev = "2454d64f8ee4fb351d0e917620e5dd1971f7eeb2" }
iceberg-storage-opendal = { default-features = false, features = ["opendal-s3"], git = "https://github.com/apache/iceberg-rust.git", rev = "2454d64f8ee4fb351d0e917620e5dd1971f7eeb2" }

[profile.release]
lto = "thin"
debug = true

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[patch.crates-io]
paste = { git = "https://github.com/dtolnay/paste" }

