[package]
name = "arrow-codec"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
pipeline-core = { workspace = true }
arrow = { workspace = true }
opentelemetry-proto = { workspace = true }
opentelemetry-semantic-conventions = { workspace = true }
prost = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
tokio = { workspace = true }

[[bench]]
name = "codec_bench"
harness = false
