[package]
name = "pipeline-core"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
thiserror = { workspace = true }
arrow = { workspace = true }
serde = { workspace = true }
figment = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
opentelemetry-otlp = { workspace = true }
tracing-opentelemetry = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "fanout_bench"
harness = false
