[package]
name = "pipeline-core"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[dependencies]
tokio = { workspace = true }
thiserror = { workspace = true }
arrow = { workspace = true }
serde = { workspace = true }
figment = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
opentelemetry-otlp = { workspace = true }
tracing-opentelemetry = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "fanout_bench"
harness = false
