[package]
name = "kafka-sink"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
pipeline-core = { workspace = true }
arrow = { workspace = true, features = ["ipc"] }
rdkafka = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
