[package]
name = "noop-transformer"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[dependencies]
pipeline-core = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
arrow = { workspace = true }
