[package]
name = "otlp-receiver"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
pipeline-core = { workspace = true }
arrow-codec = { workspace = true }
arrow = { workspace = true }
opentelemetry-proto = { workspace = true }
prost = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
axum = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
