[package]
name = "storage"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[features]
default = ["aws"]
aws = ["dep:iceberg-catalog-glue", "dep:iceberg-catalog-s3tables"]

[dependencies]
pipeline-core = { workspace = true }
arrow = { workspace = true }
parquet = { workspace = true }
opentelemetry-semantic-conventions = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
iceberg = { workspace = true }
iceberg-catalog-rest = { workspace = true }
iceberg-storage-opendal = { workspace = true }

# Conditional AWS Catalog Dependencies
iceberg-catalog-glue = { workspace = true, optional = true }
iceberg-catalog-s3tables = { workspace = true, optional = true }
